--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ requires = [
 build-backend = "hatchling.build"
 
 [project]
-name = "key_stroke"
-requires-python = ">=3.8"
+name = "cb_key_stroke"
+requires-python = ">=3.12"
 
 authors = [
-  { name="Thomas", email="thomas@chriesibaum.com" },
+  { name="Thomas", email="Thomas@chriesibaum.dev" },
 ]
 
 description = "The python key stroke module to capture a key stroke and do something useful (e.g. terminating an application). It works an all platforms"
@@ -21,7 +21,7 @@ license = { file="LICENSE" }
 
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
 
@@ -30,15 +30,30 @@ dependencies = [
     "select; platform_system == 'linux'",
     "tty; platform_system == 'linux'",
     "termios; platform_system == 'linux'",
-    "select; platform_system == 'linux'",        
     "msvcrt; platform_system == 'windows'"
 ]
 
 dynamic = ["version"]
 
+[project.optional-dependencies]
+dev = [
+    "hatch",
+    "autopep8",
+    "pycodestyle",
+    "flake8",
+    "pylint",
+    "bandit",
+    "sphinx",
+    "sphinx-inline-tabs",
+    "sphinx-copybutton",
+    "sphinx-rtd-theme",
+    "m2r2",
+
+]
+
 [tool.hatch.version]
-path = "key_stroke/__init__.py"
+path = "cb_key_stroke/__init__.py"
 
 
 [project.urls]
-"Homepage" = "https://github.com/chriesibaum/key_stroke"
+"Homepage" = "https://github.com/chriesibaum/cb_key_stroke"
