--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,26 +5,30 @@ requires = [
 
 build-backend = "hatchling.build"
 
+
+
 [project]
 name = "cb_key_stroke"
-requires-python = ">=3.12"
-
-authors = [
-  { name="Thomas", email="Thomas@chriesibaum.dev" },
-]
 
 description = "The python key stroke module to capture a key stroke and do something useful (e.g. terminating an application). It works an all platforms"
 
 readme = "README.md"
 
+authors = [{ name="Thomas", email="Thomas@chriesibaum.dev" }]
+
+requires-python = ">=3.12"
+
 license = { file="LICENSE" }
 
+dynamic = [
+    "version"
+]
+
 classifiers = [
-    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
-
 
 dependencies = [
     "select; platform_system == 'linux'",
@@ -33,7 +37,17 @@ dependencies = [
     "msvcrt; platform_system == 'windows'"
 ]
 
-dynamic = ["version"]
+
+[project.urls]
+Homepage = "https://github.com/chriesibaum/cb_key_stroke"
+Documentation = "https://chriesibaum.github.io/cb_key_stroke/"
+Repository = "https://github.com/chriesibaum/cb_key_stroke"
+
+[tool.hatch.version]
+path = "cb_key_stroke/__init__.py"
+
+
+
 
 [project.optional-dependencies]
 dev = [
@@ -51,9 +65,3 @@ dev = [
 
 ]
 
-[tool.hatch.version]
-path = "cb_key_stroke/__init__.py"
-
-
-[project.urls]
-"Homepage" = "https://github.com/chriesibaum/cb_key_stroke"
